--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
 			</div>
 
 
-			<div class="container  p-4">
+			<div class="container">
 				<h3>Men&uacute; Destacado del D&iacute;a</h3>
-				<div class="row">
-					<div class="col-4 d-flex justify-content-start">
+				<div class="row p-3">
+					<div class="col justify-content-start">
 						<div class="card justify-content-start" style="width: 16rem;">
 						  	<img src="images/ensaladilla.jpg" width="275" height="183" class="card-img-top" alt="Lasaña">
 						  	<div class="card-body">
@@ -132,7 +132,7 @@
 						  	</div>
 						</div>
 					</div>
-					<div class="col-4 d-flex justify-content-center">
+					<div class="col justify-content-center">
 						<div class="card justify-content-start" style="width: 16rem;">
 						  	<img src="images/lasaña.jpg" width="275" height="183" class="card-img-top" alt="Lasaña">
 						  	<div class="card-body">
@@ -149,7 +149,7 @@
 						  	</div>
 						</div>
 					</div>
-					<div class="col-4 d-flex justify-content-end">
+					<div class="col justify-content-end">
 						<div class="card" style="width: 16rem;">
 						  	<img src="images/bizcocho.jpeg" class="card-img-top" alt="Bizcocho">
 						  	<div class="card-body">
@@ -168,8 +168,8 @@
 					</div>
 				</div>
 				<h3>Opiniones</h3>
-				<div class="row">
-					<div class="col-4 d-flex justify-content-start">
+				<div class="row p-3">
+					<div class="col justify-content-start">
 						<div class="card" style="width: 18rem;">
   							<img class="card-img-top" src="images/carmen.jpg" alt="Carmen de Mairena">
   							<div class="card-body">
@@ -178,7 +178,7 @@
   							</div>
 						</div>
 					</div>
-					<div class="col-4 d-flex justify-content-center">
+					<div class="col justify-content-center">
 						<div class="card" style="width: 18rem;">
   							<img class="card-img-top" src="images/belen.jpg" alt="Belén Esteban">
   							<div class="card-body">
@@ -187,7 +187,7 @@
   							</div>
 						</div>
 					</div>
-					<div class="col-4 d-flex justify-content-end">
+					<div class="col justify-content-end">
 						<div class="card" style="width: 18rem;">
   							<img class="card-img-top" src="images/kiko.jpg" alt="Card image cap">
   							<div class="card-body">
